# crypt4gh-sqlite

./: .gitignore  Makefile.in  README.md  configure.ac
.github/workflows/: build.yml
docs/: conf.py
example/: Makefile  README.md  append.txt  example.pubkey  example.seckey  example.sqlite  example.txt  lorem.txt.c4gh.payload  prepend.txt
src/: .depend  crypt4gh.c  crypt4gh.h  fs.c  includes.h  main.c
src/keys/: kdf.c  kdf.h  key.c  key.h  sha2.c
